# OpenGLDP

./: CAEInterfaceTypes.h  CAEProcessingFacade.cpp  CAEProcessingFacade.h  CMakeLists.txt  DataObject.cpp  DataObject.h  FileName.cpp  GLFilterEngine.cpp  GLFilterEngine.h  GLGradientEngine.cpp  GLGradientEngine.h  OpenGLDP.sln  OpenGLDP.vcxproj  OpenGLDP.vcxproj.filters  OpenGLManager.h  RGGradient.glsl  TestConvert1.cpp  TestFieldMetrics.cpp  TestGradient.cpp  TestHarnessUtils.h  TestMultiScale.cpp  VTKDataConverter.cpp  VTKDataConverter.h  gl_context_utils.h  glad.c
.VSCodeCounter/2026-04-01_20-57-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-04-01_21-07-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Data/: 1_0.vtk  ShipHull_0.vtk  structured_grid.vtk  test_uGrid.vtk  unstructured_tet.vtk
Data/timing/: manifest.csv  timing_struct_20x20x20.vtk  timing_struct_32x32x32.vtk  timing_uhex_20x20x20.vtk  timing_uhex_32x32x32.vtk
app/: MainWindow.cpp  MainWindow.h  main.cpp
doc/: 1.md  AI交接文档.md  API文档.md  TestFieldMetrics测试说明.md  TestGradient-VTK并行说明.md  TestGradient测试说明.md  TestMultiScale测试说明.md  VTK网格类型与梯度路径说明.md  api.md  build_teacher_meeting_report.py  build_thesis_deliverables.py  enhance_wendang_academic.py  export_md_to_docx.py  export_teacher_report_docx.py  generate_bishe_final_deliverables.py  generate_professional_figures.py  generate_timing_meshes.py  generate_wendang_chapters.py  rebuild_wendang_thesis.py  update_progress_docx.py  update_wendang_researched.py  中期进展报告-修订版.md  基于OpenGL的CAE软件数据预处理方法研究与实践_本科毕业论文.docx  基于OpenGL的CAE软件数据预处理方法研究与实践_本科毕业论文.md  实验方案文档.md  对话背景与交接说明.md  开题报告-修订版.md  当前进展_问题分析与实验方案.md  当前进度.md  接口文档.md  教师汇报文档_完整版_2026-04-21.md  教师汇报文档_系统结构算法原理与问题分析.md  数据优化模块论文写作底稿.md  文献支撑.md  时间实验数据说明.md  明日汇报_快速理解代码与一小时实验方案.md  本科毕业论文详细大纲.md  梯度计算模块详解.md  测试程序指标详解.md  用户使用说明.md  (+14 more)
doc/tmp/: 进展.docx
results/: 1.txt  SampleStructGrid.txt  ShipHull_0.txt  ShipHull_00.txt  ShipHull_1.txt  data_optimization_flow.md  gradient_algorithm_flow.md  hexa.txt  notch_stress.txt  uGridEx.txt
results/gradient/: 1_0cell.csv  1_0point.csv  1_0vtkcell.csv  SampleStructGridcell.csv  SampleStructGridpoint.csv  SampleStructGridvtkcell.csv  ShipHull_0cell.csv  ShipHull_0point.csv  hexacell.csv  hexapoint.csv  hexavtkcell.csv  limbcell.csv  limbpoint.csv  notch_stresscell.csv  notch_stresspoint.csv
results/mul/: multiscaleShipHull_0cell__10__ms_clean_poly_grf.vtk  multiscaleShipHull_0cell__11__ms_clean_poly_impulse.vtk  multiscaleShipHull_0cell__12__ms_clean_poly_mixed.vtk  multiscaleShipHull_0cell__13__ms_clean_edge_gaussian.vtk  multiscaleShipHull_0cell__14__ms_clean_edge_grf.vtk  multiscaleShipHull_0cell__15__ms_clean_edge_impulse.vtk  multiscaleShipHull_0cell__16__ms_clean_edge_mixed.vtk  multiscaleShipHull_0cell__1__ms_clean_trig_gaussian.vtk  multiscaleShipHull_0cell__2__ms_clean_trig_grf.vtk  multiscaleShipHull_0cell__3__ms_clean_trig_impulse.vtk  multiscaleShipHull_0cell__4__ms_clean_trig_mixed.vtk  multiscaleShipHull_0cell__5__ms_clean_gaussian_gaussian.vtk  multiscaleShipHull_0cell__6__ms_clean_gaussian_grf.vtk  multiscaleShipHull_0cell__7__ms_clean_gaussian_impulse.vtk  multiscaleShipHull_0cell__8__ms_clean_gaussian_mixed.vtk  multiscaleShipHull_0cell__9__ms_clean_poly_gaussian.vtk  multiscaleShipHull_0cellt__10__ms_clean_edge_gaussian.vtk  (+40 more)
scripts/: generate_candidate_timing_svgs.py  generate_optimization_strength_figures.py  generate_revision_figures.py  generate_thesis_docx.py  generate_thesis_figures.py  generate_thesis_pics.py  generate_thesis_timing_svgs_v3.py  generate_timing_charts_from_results.py  prepare_docx_formula_placeholders.py  render_docx_formulas.vbs  update_docx_module_wording.py
shaders/: AdaptiveWLS.glsl  Bilateral.glsl  CellDataToPointLift.glsl  FD.glsl  MultiScaleFuse.glsl  RGGradient.glsl  ShapeCellGradient.glsl  ShapePointGradient.glsl  SparseGradient.glsl  SparseReconstruct.glsl  USGGradient.glsl  WLS.glsl
wendang/: 00_摘要.md  01_绪论.md  02_相关技术与理论基础.md  03_系统需求分析与总体设计.md  04_核心算法设计与实现.md  05_实验设计与结果分析.md  06_总结与展望.md  07_参考文献.md  README.md  中期进展报告-修订版.md  交接文档_2026-05-19.md  基于OpenGL的CAE软件数据预处理方法研究与实践_本科毕业论文.docx  基于OpenGL的CAE软件数据预处理方法研究与实践_本科毕业论文.md  基于OpenGL的CAE软件数据预处理方法研究与实践_本科毕业论文_修订版_数据优化_结构化网格.docx  基于OpenGL的CAE软件数据预处理方法研究与实践_本科毕业论文_公式版_结构化网格.docx  开题报告-修订版.md  本科毕业论文详细大纲.md  立题论证书-修订版.md
(+25 files in other folders)
